# learning-from-human-preferences

./: LICENSE  README.md  docker-compose-dev.yml  dockerized_dev.sh
rl-human-prefs/: .flake8  .gitignore  mypy.ini  pyproject.toml  tox.ini
rl-human-prefs-api/: .golangci.yml  Dockerfile  go.mod
rl-human-prefs-api/cmd/rl-human-prefs-api/: root.go  serve.go
rl-human-prefs-ui/: .eslintrc.json  .gitignore  Dockerfile  README.md  config.json  docker-compose.yml  jest.config.js  package.json  tsconfig.json  webpack.config.js
rl-human-prefs-ui/public/: index.html
rl-human-prefs-ui/src/: App.tsx  index.tsx  routes.ts  routes.tsx
rl-human-prefs-ui/src/components/: Button.tsx  Header.tsx  Layout.tsx
rl-human-prefs-ui/src/components/Button/: LinkButton.tsx  style.ts
rl-human-prefs-ui/src/pages/: comparison.tsx  home.tsx
rl-human-prefs/tests/: test_rl_human_prefs.py
